--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marcos",
+  "name": "new_macro",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -10,13 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
     "mongodb": "^6.6.2",
-    "mongoose": "^8.4.0"
-  },
-  "devDependencies": {
+    "mongoose": "^8.4.0",
     "nodemon": "^3.1.0"
   }
 }
